--- a/.github/workflows/nuxtjs-to-gh-page.yml
+++ b/.github/workflows/nuxtjs-to-gh-page.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Static HTML export with Nuxt
-        run: NUXT_APP_BASE_URL=/how-many-qps/ npx nuxt build --preset github_pages
+        run: npx nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
