--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.7",
-    "duration": "^0.2.2",
     "nuxt": "^3.13.0",
     "parse-duration": "^1.1.0",
+    "primeflex": "^3.3.1",
     "primevue": "^4.0.7",
     "vue": "latest",
     "vue-router": "latest"
